[package]
name = "gitkeep"
version = "0.1.0"
description = "High-performance GitHub archival tool"
edition = "2024"
license = "MIT"
repository = "https://github.com/trypsynth/gitkeep"
keywords = ["github", "archive", "git", "sync"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
inquire = "0.9.4"
octocrab = "0.54.0"
open = "5.3.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
